--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -1,5 +1,5 @@
 default=Произошла непредвиденная ошибка!
 badRequest=Переданные данные являются не валидными!
 
-auth.username.notFound=Имя пользователя не найдено!
-auth.password.incorrect=Неверный пароль!
+auth.credentials.invalid=Неверные данные для входа!
+auth.jwt.invalid=JWT невалиден!
