--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 default=An unexpected error has occurred!
 badRequest=The transmitted data is invalid!
 
-auth.username.notFound=The username was not found!
-auth.password.incorrect=The password was incorrect!
+auth.credentials.invalid=The auth credentials is invalid!
+auth.jwt.invalid=The JWT is invalid!
